[ADD]添加了遍历文章

--- a/source/_posts/🍋Node相关/常用方法总结.md
+++ b/source/_posts/🍋Node相关/常用方法总结.md
@@ -32,17 +32,38 @@ path.extname("ex.js");   // .js
 
 ```
 
+3. path.basename(path)
+  - 返回指定路径的文件
+   
+```javascript
+// 会根据系统的不同返回不同的结果
+/* 在 POSIX 上: */
+path.basename('C:\\temp\\myfile.html');
+// 返回: 'C:\\temp\\myfile.html'
+
+/* 在 Windows 上: */
+path.basename('C:\\temp\\myfile.html');
+// 返回: 'myfile.html'
+
+/* 要在任何操作系统上使用 Windows 文件路径时获得一致的结果 */
+path.win32.basename('C:\\temp\\myfile.html');
+// 返回: 'myfile.html'
+
+```
+
 
 
 ## 常用函数类
 1. 向指定路径追加内容
 
 ```javascript
-
+// 异步
 fs.appendFile(`${menuPath}/menu.md`, "追加的数据", err => {
   if (err) throw err;
   console.log("数据已追加到文件");
 });
+// 同步，参数分别是，路径，写入内容，[编码格式,默认utf8]
+fs.appendFileSync(menuPosition, `${title} \n\n`, "utf8");
 
 ```
 
@@ -51,6 +72,7 @@ fs.appendFile(`${menuPath}/menu.md`, "追加的数据", err => {
 ```javascript
 
 path.join('/c','/b','/a')  // '/c/b/a'
+path.join("a", "b", "c")   // '/c/b/a'
 
 ```
 
@@ -58,4 +80,20 @@ path.join('/c','/b','/a')  // '/c/b/a'
 
 ```javascript
 
+// 我的写法是根据有没有后缀 . ,应该是有官方的方法的，明天找一下
+```
+
+4. 获取项目根目录
+
+```javascript
+process.cwd() 
+// 这个确实得到了项目根目录，但是文档写的是这个nodey运行的目录，然后我看hzero是吧这个地址又传递给了fs.realpathSync ,但是这个说的是解析地址，我没明白，解析地址是什么意思
+/* Hzero获取项目根目录的方法 */
+const fs = require("fs");
+const path = require("path");
+
+const appDirectory = fs.realpathSync(process.cwd());
+const resolveApp = relativePath => path.resolve(appDirectory, relativePath);
+
+const appPath = resolveApp(".");
 ```
