[ADD]闭包的文章总结

--- a/source/_posts/🍉JS基础类/js总结/快捷键.md
+++ b/source/_posts/🍉JS基础类/js总结/快捷键.md
@@ -23,12 +23,26 @@
 |-------------------------------|--------------------------------------------------------|
 | Command + Shift + 3           | 将屏幕捕捉到文件                                       |
 | Command + Shift + 4           | 将所选屏幕内容捕捉到一个文件，或按空格键仅捕捉一个窗口 |
+| Command + Shift + 5           | 录屏                                                   |
 | Command + Shift + Control + 3 | 将屏幕内容捕捉到剪贴板                                 |
 | Command + Shift + Control + 4 | 将所选屏幕内容捕捉到剪贴板，或按空格键仅捕捉一个窗口   |
+
+### 常用快捷键
+| 功能                     | 快捷键     |
+|--------------------------|------------|
+|                          |            |
+| Commamd + Control + 空格 | 打开表情包 |
+
 
 ### 
 
 ## 5. vscode快捷键
+
+### 生成函数注释
+| 功能 | 快捷键 |
+|------|--------|
+|      |        |
+
 
 ### 光标
 | 功能                       | 快捷键              |
