[FIX]箭头函数文章修改了参考文章

--- a/source/_posts/🍉JS基础类/js总结/箭头函数.md
+++ b/source/_posts/🍉JS基础类/js总结/箭头函数.md
@@ -88,7 +88,8 @@ console.log(sayName2());            // "hong" => this始终指向window
 console.log(sayName2.call(person)); // "hong" => this始终指向window 
 ```
 
-但是箭头函数没有this也给我们带来了很多方便，比如之前我们希望函数内部的闭包可以拿到他的包含作用的this, 就需要提前将this保存在一个闭包可以放到的变量里面;
+
+箭头函数没有this，给我们带来了很多方便，比如之前我们希望函数内部的闭包可以拿到他的包含作用的this, 就需要提前将this保存在一个闭包可以放到的变量里面;
 在匿名函数返回之前，我们将sayName()的this(指向obj)保存在变量that中，这样，我们就可以通过that访问到obj的name属性
 
 ```javaScript
@@ -105,7 +106,7 @@ var p = new Person();  // 0
 
 ```
 
-但是由于箭头根本没有this,所以可以直接访问this
+但是由于箭头根本没有this,所以可以直接访问包含函数this
 
 ```javaScript
 function Person() {
@@ -201,11 +202,10 @@ console.log(DemoA.prototype.constructor === DemoA); // TypeError: Cannot read pr
 console.log(DemoB.prototype.constructor === DemoB); // true
 ```
 
-## 没有new.target
 
 
 
 
 ## 参考
-- [箭头函数 MDN]()
-- [箭头函数 ya yu]()
+- [箭头函数 MDN](https://developer.mozilla.org/zh-CN/docs/Web/JavaScript/Reference/Functions/Arrow_functions)
+- [冴羽-ES6系列之箭头函数](https://github.com/mqyqingfeng/Blog/issues/85)
