[ADD]新增了好多文章

--- a/source/_posts/🍉JS基础类/js一些经常搞不清的点/函数柯里化.md
+++ b/source/_posts/🍉JS基础类/js一些经常搞不清的点/函数柯里化.md
@@ -1,15 +1,11 @@
 # 函数柯里化
 
-1. 是什么？
-  - 把带有多个参数的函数转换成一系列的嵌套函数，他返回一个新函数
-2. 作用
-  - 用于创建已经设置好一个或者多个参数的函数。 函数柯里化的基本方法和函数绑定是一样的：使用一个闭包返回一个函数，两者的区别在于当函数被调用时，返回的函数还需要设置一些传入的参数
-3. 
-  - 优点：避免拼单的调用具有相同参数的函数
-  
+
+
 ## 初级理解
 
 - 如果一个商店每天折扣不同，那么通常写一个函数是这样的，但是这样每次都要输入折扣和价格
+
 ```javascript
 function discount(dis, price) {
   return dis * 0.01 * price;
@@ -18,7 +14,8 @@ discount(2, 200)
 discount(4, 200)
 ```
 
-- 柯里化的写法, 这样每次输入价格就可以了
+- 柯里化的写法, 只需要输入一次折扣，之后每次只需要输入价格就可以了
+
 ```javascript
 function discount2(dis) {
   return function(price) {
@@ -35,13 +32,24 @@ fourDiscount(300)  // 120
 
 ```
 
-## 柯里化
 
-1. 函数柯里化通常与以下步骤动态创建：
-   - 调用另一个函数并为他传入要`柯里化的函数`和`必要参数`
+
+
+
+## 柯里化实现
+
+- **函数柯里化** 它用于创建已经设置好了一个或多个参数的函数。函数柯里化的基本方法和函数绑定是一样的：使用一个闭包返回一个函数，两者的区别在于，当函数被调用时，返回的函数还需要设置一些传入的参数（如上面折扣的例子，fiveDiscount()调用时还需要参数price）
+
+- 函数柯里化通常与以下步骤动态 **创建**：调用另一个函数并为他传入要`柯里化的函数`和`必要参数`
+
 ```javascript
-
 /* 该例来自《javascript高级程序设计》 */
+/**
+ * @des : 函数柯里化
+ * @param {Function} [fn] 要进行柯里化的函数
+ * @param {*} 其他参数
+ * @return {*} 将参数通过函数fn处理之后的结果
+ */
 function curry(fn) {
   // curry 第一个参数是要进行柯里化的函数，其他参数是要传入的值
   // 获取第一个参数外的其他参数
@@ -57,48 +65,29 @@ function add(num1, num2) {
   return num1 + num2;
 }
 const curriedAdd = curry(add, 5);
-// 3成为add的第二个参数
 curriedAdd(3);  // 8
-// 也可以像这样，一次给出所有参数
+
+```
+
+也可以像这样一次性给出所有参数
+
+```javascript
 const curriedAdd2 = curry(add, 5, 3);
-// 3成为add的第二个参数
 curriedAdd();  // 8
 
-
-
-```
-
-## 使用函数柯里化实现 bind
-
-```javascript
-function bind(fn, context) {
-  var args = Array.prototype.slice.call(arguments, 2); // args,包含了来自外部函数
-  return function() {
-    var innerArgs = Array.prototype.slice.call(arguments); // innerArgs，用来存放内部函数的所有参数
-    var finalArgs = args.concat(innerArgs); // finalArgs，内部外部所有的参数
-    return fn.apply(context, finalArgs); // 使用apply将结果传递给函数 fn
-  };
-}
-
-const person = {
-  name: "hong",
-  sayName: function() {
-    console.log(this.name);
-  } 
-};
-global.name = "ming";
-person.sayName();             // "hong"
-bind(person.sayName, null)(); // "ming"
-
 ```
 
 
-## 柯里化升级版
+
+
+## ES6简化版本
+
+- 结合ES6语法将`curry()`结构进行简化
+- 由于箭头函数没有绑定argumens, 所以如果在箭头函数内部访问`arguments`对象，他会向上查找, 绑定距离最近的非箭头函数的arguments对象
 
 ```javascript
-
 /**
- * @des 通用的柯里化函数
+ * @des 柯里化函数箭头函数版本
  * @param {Function} fn 希望可以柯里化的函数
  * @param {*} [参数们]
  * @return {Function} 柯里化之后的函数
@@ -109,7 +98,63 @@ function curry(fn, ...args) {
 
 ```
 
+
+
+
+
+## 升级版（最终代码）
+
+但是以上写法存在问题，我们只能传递两次参数，要么第一次给一部分，第二次给一部分，要么一次性给出所有参数，然后在调用函数，但是如果我们不确定每次传递参数的 **个数** 和 **次数**
+
+如果传入的fn是
+
+```javascript
+const add = function(val1, val2, val3, val4, val5) {
+  return val1 + val2 + val3 + val4 + val5;
+};
+```
+
+用户的调用顺序为这些情况，那我们的curry就不符合需求了
+
+```javascript
+curry(add, 1)(2, 3)(4)(5);
+curry(add)(1, 2, 3, 4, 5);
+curry(add)(1, 2)(3, 4, 5);
+```
+
+使curry更加健壮，我们需要判断用于是否已经输入了所有的参数（fn.length），如果还没有输入完毕，则返回一个函数使用户可以继续输入；若已经输入完毕，则返回参数根据函数`fn`的规则计算的结果，代码如下
+
+```javascript
+function curry(fn, ...args) {
+  let length = fn.length;
+  args || (args = []);
+
+  return function(..._args) {
+    const finalArgs = [...args, ..._args];
+
+    if (finalArgs.length < length) {
+      return curry.apply(this, fn, finalArgs);
+    } else {
+      return fn.apply(this, finalArgs);
+    }
+  };
+}
+```
+调用一下试试看,  都可以得到正确的结果
+
+```javascript
+console.log(curry(add, 1)(2, 3)(4)(5)); // 15
+console.log(curry(add)(1, 2, 3, 4, 5)); // 15
+console.log(curry(add)(1, 2)(3, 4, 5)); // 15
+```
+
+
+
+
 # 我的疑问？
+
+正常来想，3 * 0.1 * 300 = 90，但是结果并不是？？为什么？
+
 
 ```javascript
 // 为什么不是 90
@@ -123,3 +168,11 @@ const threeDiscount = discount2(3);
 threeDiscount(300);  // 90.00000000000001
 
 ```
+
+## 参考文章
+
+- [《javascript语言精粹》(第四章-函数)]
+- [《javascript高级程序设计-高级技巧》(第22章-高级技巧)]
+- [箭头函数MDN]
+- [「译」理解JavaScript的柯里化](https://juejin.im/post/5bf18715e51d45244939acc5)
+- [冴羽ES6函数柯里化](https://github.com/mqyqingfeng/Blog/issues/42)
