--- a/source/_posts/🍉JS基础类/js基础总结/快捷键.md
+++ b/source/_posts/🍉JS基础类/js基础总结/快捷键.md
@@ -39,9 +39,10 @@
 ## 5. vscode快捷键
 
 ### 生成函数注释
-| 功能 | 快捷键 |
-|------|--------|
-|      |        |
+| 功能                            | 快捷键         |
+|---------------------------------|----------------|
+| Command+shift+T Command+shift+T | 生成函数注释   |
+| Command+shift+I Command+shift+I | 生成文件头注释 |
 
 
 ### 光标
@@ -67,13 +68,14 @@
 | 选中一列                     | option+ shift + 点着鼠标 |
 
 ### 删除操作
-| 功能                       | 快捷键               |
-|----------------------------|----------------------|
-| 删除当前行光标后的所有字符 | cmd + fn + delete    |
-| 删除当前行光标前的所有字符 | cmd + delete         |
-| 删除当前行光标后的字符     | option + fn + delete |
-| 删除当前行光标前的字符     | option + delete      |
-| 删除当前行                 | shift + commond + K  |
+| 功能                       | 快捷键                  |
+|----------------------------|-------------------------|
+| 删除当前行光标后的所有字符 | cmd + fn + delete       |
+| 删除当前行光标前的所有字符 | cmd + delete            |
+| 删除当前行光标后的字符     | option + fn + delete    |
+| 删除当前行光标前的字符     | option + delete         |
+| 删除当前行                 | shift + commond + K     |
+| 剪切尾随空格               | commond + K commond + X |
 
 
 ### 添加注释
