--- a/source/_posts/🍉JS基础类/js基础总结/箭头函数.md
+++ b/source/_posts/🍉JS基础类/js基础总结/箭头函数.md
@@ -122,6 +122,8 @@ var p = new Person(); // 0
 
 > this和arguments也存在着同样的问题。如果不使用箭头函数，但是想访问作用域中的arguments对象，必须将对该对象的引用保存到另一个闭包能够访问的变量中。
 
+
+
 ## 没有arguments
 
 箭头函数没有自己的arguments对象，这不一定是一件坏事，因为这样，箭头函数就可以访问外围函数的arguments对象
@@ -202,8 +204,71 @@ console.log(DemoA.prototype.constructor === DemoA); // TypeError: Cannot read pr
 console.log(DemoB.prototype.constructor === DemoB); // true
 ```
 
+## 避免使用箭头函数的三种情况
+
+由于箭头函数没有绑定this, 所以以下三种情况避免使用
+
+1. 对象的方法
+
+```javaScript
+// bad
+const person = {
+  name: "小红",
+  sayName: () => {
+    console.log(this);  // Window
+    return this.name
+  }
+};
+person.sayName();
+person.sayName();   // undefined
+
+```
 
 
+2. 定义原型方法
+
+```javaScript
+// right
+function FooA() {
+  this.value = 1;
+}
+FooA.prototype.getValue = function() {
+  console.log(this);  // 指向FooA的实例
+  console.log(this.value);
+};
+
+let foo1 = new FooA()
+let foo2 = new FooA()
+foo2.value = 2
+
+foo1.getValue() // 1
+foo2.getValue() // 2
+
+// bad
+function Foo() {
+  this.value = 1
+}
+
+Foo.prototype.getValue = () => {
+  console.log(this) // Window
+  console.log(this.value)
+}
+
+let foo = new Foo()
+foo.getValue();  // undefined
+```
+
+
+3. 作为事件的回调函数
+
+```javaScript
+// bad
+const button = document.getElementById('myButton');
+button.addEventListener('click', () => {
+    console.log(this === window); // => true
+    this.innerHTML = 'Clicked button';
+});
+```
 
 
 ## 参考
