--- a/source/_posts/🍉JS基础类/js基础总结/快捷键.md
+++ b/source/_posts/🍉JS基础类/js基础总结/快捷键.md
@@ -24,7 +24,7 @@
 
 | 快捷键     | 功能                     |
 |------------|--------------------------|
-| 打开表情包 | Commamd + Control + 空格 |
+| 表情快捷键 | Commamd + Control + 空格 |
 
 
 
