fix:一些不用在意的小修改

--- a/source/_posts/🍋Node相关/常用方法总结.md
+++ b/source/_posts/🍋Node相关/常用方法总结.md
@@ -34,7 +34,9 @@ path.extname("ex.js");   // .js
 
 3. path.basename(path)
   - 返回指定路径的文件
-   
+  - 若指定参数二，则不返回文件后缀
+
+
 ```javascript
 // 会根据系统的不同返回不同的结果
 /* 在 POSIX 上: */
@@ -49,6 +51,9 @@ path.basename('C:\\temp\\myfile.html');
 path.win32.basename('C:\\temp\\myfile.html');
 // 返回: 'myfile.html'
 
+/* 返回basename */
+path.basename('/foo/bar/baz/asdf/quux.html', '.html');  // quux
+
 ```
 
 
@@ -62,6 +67,8 @@ fs.appendFile(`${menuPath}/menu.md`, "追加的数据", err => {
   if (err) throw err;
   console.log("数据已追加到文件");
 });
+
+
 // 同步，参数分别是，路径，写入内容，[编码格式,默认utf8]
 fs.appendFileSync(menuPosition, `${title} \n\n`, "utf8");
 
