docs:添加知识点目录

--- a/source/_posts/🍭网络/前端鉴权.md
+++ b/source/_posts/🍭网络/前端鉴权.md
@@ -45,7 +45,7 @@ token一般来说，有三种
 - 用户请求登录后，后端返回一个token,这个token是加密过的， 用户后面的每次请求都要带着token
 优点
 
-## jwt
+## JWT
 我理解是颁发给了一个证书，设置的限定时间内都可以随意访问，但是这个有效时间
 不要设置的太长了
 
