docs:新增面试题

--- a/source/_posts/🍉JS基础类/js一些经常搞不清的点/函数柯里化.md
+++ b/source/_posts/🍉JS基础类/js一些经常搞不清的点/函数柯里化.md
@@ -38,7 +38,8 @@ fourDiscount(300)  // 120
 
 ## 柯里化实现
 
-- **函数柯里化** 它用于创建已经设置好了一个或多个参数的函数。函数柯里化的基本方法和函数绑定是一样的：使用一个闭包返回一个函数，两者的区别在于，当函数被调用时，返回的函数还需要设置一些传入的参数（如上面折扣的例子，fiveDiscount()调用时还需要参数price）
+- **函数柯里化** 它用于创建已经设置好了一个或多个参数的函数。
+- 函数柯里化的基本方法和函数绑定是一样的：使用一个闭包返回一个函数，两者的区别在于，当函数被调用时，返回的函数还需要设置一些传入的参数（如上面折扣的例子，fiveDiscount()调用时还需要参数price）
 
 - 函数柯里化通常与以下步骤动态 **创建**：调用另一个函数并为他传入要`柯里化的函数`和`必要参数`
 
@@ -122,7 +123,8 @@ curry(add)(1, 2, 3, 4, 5);
 curry(add)(1, 2)(3, 4, 5);
 ```
 
-使curry更加健壮，我们需要判断用于是否已经输入了所有的参数（fn.length），如果还没有输入完毕，则返回一个函数使用户可以继续输入；若已经输入完毕，则返回参数根据函数`fn`的规则计算的结果，代码如下
+使curry更加健壮，我们需要判断用于是否已经输入了所有的参数（fn.length），
+如果还没有输入完毕，则返回一个函数使用户可以继续输入；若已经输入完毕，则返回参数根据函数`fn`的规则计算的结果，代码如下
 
 ```javascript
 function curry(fn, ...args) {
