--- a/source/_posts/🍓面试知识点/JS基础类/闭包相关.md
+++ b/source/_posts/🍓面试知识点/JS基础类/闭包相关.md
@@ -4,7 +4,9 @@
 
 > 关键词：作用域
 
-我认为闭包就是使得函数在生命作用域以外的地方执行，就产生了闭包
+- 闭包是指有权访问另一个函数作用域中的变量的函数
+- 创建闭包的常见方式，就是在一个函数内部创建另一个函数
+- 当一个函数可以记住并且访问其所在的词法作用域
 
 
 ## 闭包常用业务场景
