--- a/source/_posts/🍓面试知识点/目录.md
+++ b/source/_posts/🍓面试知识点/目录.md
@@ -5,14 +5,22 @@
 1. [ ] call和apply的原理是什么？
 2. [x] 手写 bind ？
 3. [ ] 手写 promise ？
-4. [ ] 手写实现深拷贝
-5. [ ] 函数柯里化实现？
-6. [ ] 闭包原理
-7. [ ] 闭包应用场景
-8. [ ] new的原理是什么？
-9. [ ] 如何正确判断this的指向？
-10. [ ] 实现一个深拷贝？
-11. [ ] 
+4. [x] 手写 柯里化实现？普通版和高级版
+5. [ ] 手写 实现深拷贝
+6. [ ] 闭包相关 闭包原理？闭包应用场景？闭包常见的坑？
+7. [x] new的原理是什么？
+8.  [ ] this相关 如何正确判断this的指向？
+9.  [ ] 什么是防抖？什么是节流？
+10. [ ] 继承有哪些？优缺点是什么？
+11. [ ] 前端跨域产生原因？常见解决方法？
+12. [x] Http和https区别？（http明文传输，s加了ssl加密传输，）
+
+
+## 框架类
+
+1. [ ] Vue为什么data以函数返回？（避免变量共享，这样他们就在同一个对象）
+2. [ ] 是否遇到过Vue深层次对象双向绑定后，子组件未监听到更新的情况？怎么解决？（1使用this.$set , 2 deep:true有性能问题）
+3. [ ] vue的响应式怎么做的？
 
 ## 算法
 
@@ -26,11 +34,22 @@
 1. [x] 输入URL后发生了什么
 2. [x] CDN原理
 3. [ ] 什么是防抖和节流？有什么区别？如何实现？
+4. [ ] 介绍下缓存？
+5. [ ] 几种缓存策略的对比简单说一下？
 
 ## 网络安全类
 
-1. [ ] 前端鉴权 cookies,session,token,
-2. [ ] 
+2. [ ] 前端鉴权 cookies,session,token,
+3. [ ] 
+
+
+
+
+
+
+
+
+
 
 
 
