docs:知识点目录更新

--- a/source/_posts/🍓面试知识点/性能优化类/防抖和节流.md
+++ b/source/_posts/🍓面试知识点/性能优化类/防抖和节流.md
@@ -1,6 +1,30 @@
 ## 防抖
 高频事件在规定的事件只执行一次，如规定的时间内再次触发，则重新计算时间
 
+### 防抖实现方法
+
+```javascript
+/**
+ * @des 防抖
+ * @param {Function} func 要进行防抖的数据
+ * @return:
+ */
+function debounce(func, wait = 1000) {
+  // 可以放入项目中的公共方法中进行调用（鹅只是省事）
+  let timeout;
+  return function(event) {
+    clearTimeout(timeout);
+    timeout = setTimeout(() => {
+      func.call(this, event);
+    }, wait);
+  };
+}
+```
+
 ## 节流
 高频时间在规定的时间内只执行一次
+
+
+
+
 https://github.com/mqyqingfeng/Blog/issues/22
