--- a/source/_posts/🍓面试知识点/理解目录.md
+++ b/source/_posts/🍓面试知识点/理解目录.md
@@ -3,33 +3,58 @@
 ## JS基础类
 
 1. call和apply的原理是什么？
-2.  Http和https区别？
+
+2. this?
+   1. this是函数调用时发生的绑定，this的指向与函数的调用位置有关系
+   2. this有四种绑定规则
+      1. 默认绑定：调用位置是否有上下文对象（看是否被某个对象拥有或者包含），this即指向这个包含他的对象
+      2. 显式绑定：call和apply显式绑定，bind硬绑定
+      3. 隐式绑定：看是否被某个对象拥有或者包含
+      4. new绑定
+
+3. Http和https区别？
     1. http是明文传输，无状态
     2. https 是在http+ssl, 使用ssl将报文加密
-3. new的原理？发生的四个步骤？
-   1. 新生成一个对象
-   2. 将构造函数的作用域赋给新数组（绑定this）
-   3. 执行构造函数
-   4. 返回一个新对象
-4. 继承的方法有哪些？优缺点是什么？（详见内页）
+
+4. new的原理？发生的四个步骤？
+   1. 创建（或者说构造）一个全新的对象
+   2. 新对象被执行原型链接，）
+   3. 这个新对象会被绑定到函数调用的this
+   4. 若函数未返回其他对象，那么new表达式中的函数调用会自动返回这个新对象
+
+
+5. 继承的方法有哪些？优缺点是什么？（详见内页）
    1. 原型继承
       1. 缺点：无法实现多继承，所有实例都共享父类实例的方法
    2. 构造函数继承
    3. 组合继承
    4. ES6 extends
-5. 前端跨域产生原因？常见解决方法？
-6. 闭包相关 闭包原理？
+
+6. 前端跨域产生原因？常见解决方法？
+
+7. 闭包相关 闭包原理？
    1. 闭包指的是有权访问另一个词法作用域的函数
    2. 常见的创建闭包的方式就是在一个函数内部创建另一个函数
    3. 当函数可以记住并访问其所在的函数作用域，使函数可以在他本身词法作用域以外执行，就产生了闭包
-7. 闭包应用场景？
-   1. 函数科利华
+
+8. 闭包应用场景？
+   1. 函数柯里化
    2. 变量缓存
    3. 实现类的继承
    4. 封装工厂函数
    5. 匿名自执行函数，因为执行之后外部无法访问其内部变量，执行完即销毁内存空间？
-8. 闭包常见的坑？
-9.  
+
+9.  闭包常见的坑？
+
+10. 判断数据类型的方法有哪些？区别是什么？
+    1. typeof
+       1. 只能判断基础数据类型，除了Function,其他的使用能用new操作符创建的都是Object
+       2. 正则表达式字面量，环境不同，结果不同（FireFox，Node是Object, Chrome是Function）
+       3. 变脸未声明返回'undefined'而不会抛出错误
+    2. A instanceof B 
+       1. 用于判断A是否B的实例，即B的prototype属性，是否在A的原型链上
+    3. Object.prototype.toString.call(A) 
+       1. 最完美的方式，除了有点长
 
 
 
@@ -37,9 +62,11 @@
 ## 框架类
 1. vue的data以函数返回？
    1. 避免变量共享
+
 2. 是否遇到过Vue深层次对象双向绑定后，子组件未监听到更新的情况？怎么解决
    1. 方法一：使用deep:true,但是由性能问题
    2. 方法二：使用this.$set
+
 3. vue的响应式怎么做到的？
    1. init时 使用object.defineproperty监听数据变化
    2. 利用setter和getter触发
@@ -48,7 +75,16 @@
 ## 性能优化类
 
 1. 介绍下缓存？
-   1. 强缓存
-      1. 
-   2. 协商缓存
+   1. 强缓存（不走服务器）
+      1. Expires
+      2. cache-control
+   2. 协商缓存（走服务器）
+      1. last-modified/last-modified-since
+      2. Etag/If-None-Match
+
+2. 防抖？（详细见内页）
+   1. 防抖就是用户的操作永远在指定的时候后执行，若定时期间该函数再次执行，则重新计时
+
+3. 节流？（详细见内页）
+   1. 定时去执行一次操作，在规定的时间内，不管用户执行多少次操作，都只会执行一次
 
