--- a/source/_posts/🍓面试知识点/目录.md
+++ b/source/_posts/🍓面试知识点/目录.md
@@ -9,11 +9,13 @@
 5. [ ] 手写 实现深拷贝
 6. [ ] 闭包相关 闭包原理？闭包应用场景？闭包常见的坑？
 7. [x] new的原理是什么？
-8.  [ ] this相关 如何正确判断this的指向？
-9.  [ ] 什么是防抖？什么是节流？
+8. [ ] this相关 如何正确判断this的指向？
+9. [ ] 什么是防抖？什么是节流？
 10. [ ] 继承有哪些？优缺点是什么？
 11. [ ] 前端跨域产生原因？常见解决方法？
-12. [x] Http和https区别？（http明文传输，s加了ssl加密传输，）
+12. [x] Http和https区别？
+13. [ ] 箭头函数有哪些特点？
+14. [ ] 判断数据类型的方法有哪些？区别是什么？
 
 
 ## 框架类
@@ -33,11 +35,16 @@
 
 1. [x] 输入URL后发生了什么
 2. [x] CDN原理
-3. [ ] 什么是防抖和节流？有什么区别？如何实现？
+3. [x] 什么是防抖和节流？有什么区别？如何实现？(TODO:看下lodash的实现)
 4. [ ] 介绍下缓存？
 5. [ ] 几种缓存策略的对比简单说一下？
+6. [ ] 前端有哪些地方可以优化？
+7. [ ] CSS优化讲一下？
+
+
 
 ## 网络安全类
+
 
 2. [ ] 前端鉴权 cookies,session,token,
 3. [ ] 
