--- a/source/_posts/🍉JS基础类/js一些经常搞不清的点/函数柯里化.md
+++ b/source/_posts/🍉JS基础类/js一些经常搞不清的点/函数柯里化.md
@@ -127,20 +127,25 @@ curry(add)(1, 2)(3, 4, 5);
 如果还没有输入完毕，则返回一个函数使用户可以继续输入；若已经输入完毕，则返回参数根据函数`fn`的规则计算的结果，代码如下
 
 ```javascript
+
+function add(a, b, c, d, e) {
+  return a + b + c + d + e;
+}
+
 function curry(fn, ...args) {
-  let length = fn.length;
-  args || (args = []);
+  const length = fn.length;
 
   return function(..._args) {
     const finalArgs = [...args, ..._args];
-
+    console.log(finalArgs);
     if (finalArgs.length < length) {
-      return curry.apply(this, fn, finalArgs);
+      return curry.call(this, fn, ...finalArgs);
     } else {
       return fn.apply(this, finalArgs);
     }
   };
 }
+
 ```
 调用一下试试看,  都可以得到正确的结果
 
