--- a/source/_posts/🍓面试知识点/目录.md
+++ b/source/_posts/🍓面试知识点/目录.md
@@ -15,7 +15,10 @@
 11. [ ] 前端跨域产生原因？常见解决方法？
 12. [x] Http和https区别？
 13. [ ] 箭头函数有哪些特点？
-14. [ ] 判断数据类型的方法有哪些？区别是什么？
+14. [x] 判断数据类型的方法有哪些？区别是什么？
+15. [x] 说一下对原型链的理解？
+16. [ ] 判断两个对象相等？
+17. [ ] AMD，common.js规范
 
 
 ## 框架类
@@ -26,28 +29,28 @@
 
 ## 算法
 
-1. [ ] 三种树遍历排序
-2. [ ] 顺序排序
-3. [ ] 数组扁平化
+1. [ ] 三种树遍历排序?
+2. [ ] 顺序排序?
+3. [ ] 数组扁平化?
 
 
 ## 性能优化类
 
-1. [x] 输入URL后发生了什么
-2. [x] CDN原理
-3. [x] 什么是防抖和节流？有什么区别？如何实现？(TODO:看下lodash的实现)
-4. [ ] 介绍下缓存？
-5. [ ] 几种缓存策略的对比简单说一下？
-6. [ ] 前端有哪些地方可以优化？
-7. [ ] CSS优化讲一下？
+1. [x] CDN 原理
+2. [ ] 介绍下缓存？
+3. [ ] CSS优化讲一下？
+4. [x] 输入URL后发生了什么?
+5. [ ] 前端有哪些地方可以优化？
+6. [ ] 几种缓存策略的对比简单说一下？
+7. [x] 什么是防抖和节流？有什么区别？如何实现？(TODO:看下lodash的实现)
 
 
 
 ## 网络安全类
 
 
-2. [ ] 前端鉴权 cookies,session,token,
-3. [ ] 
+1. [ ] 前端鉴权 cookies, session, token,
+2. [ ] 
 
 
 
