--- a/source/_posts/🍓面试知识点/理解目录.md
+++ b/source/_posts/🍓面试知识点/理解目录.md
@@ -4,23 +4,23 @@
 
 1. call和apply的原理是什么？
 
-2. this?
+2. this? (详细见内页)
    1. this是函数调用时发生的绑定，this的指向与函数的调用位置有关系
-   2. this有四种绑定规则
-      1. 默认绑定：调用位置是否有上下文对象（看是否被某个对象拥有或者包含），this即指向这个包含他的对象
+   2. this有四种绑定规则, 优先级依次
+      1. new绑定：指向实例
       2. 显式绑定：call和apply显式绑定，bind硬绑定
-      3. 隐式绑定：看是否被某个对象拥有或者包含
-      4. new绑定
+      3. 默认绑定：调用位置是否有上下文对象（看是否被某个对象拥有或者包含），this即指向这个包含他的对象
+      4. 隐式绑定：看是否被某个对象拥有或者包含
 
 3. Http和https区别？
     1. http是明文传输，无状态
     2. https 是在http+ssl, 使用ssl将报文加密
 
 4. new的原理？发生的四个步骤？
-   1. 创建（或者说构造）一个全新的对象
-   2. 新对象被执行原型链接，）
-   3. 这个新对象会被绑定到函数调用的this
-   4. 若函数未返回其他对象，那么new表达式中的函数调用会自动返回这个新对象
+   1. 创建（或者说构造）一个全新的对象；
+   2. 这个新对象会被执行 [[原型]] 连接
+   3. 这个新对象会被绑定到函数调用的this；
+   4. 若函数未返回其他对象，那么new表达式中的函数调用会自动返回这个新对象；
 
 
 5. 继承的方法有哪些？优缺点是什么？（详见内页）
@@ -56,7 +56,12 @@
     3. Object.prototype.toString.call(A) 
        1. 最完美的方式，除了有点长
 
-
+11. 原型链的理解：
+    1.  我理解，所有的对象都有一个 `prototype` 属性，指向他的原型，原型都有个costructor属性指向该对象;
+    2.  我们可以通过new操作符创建该对象的实例，创建的实例拥有一个 `__proto__` 指针，指向其构造函数的原型对象;
+    3.  实例可以继承其原型对象的所有可继承属性和方法;
+    4.  原型链，当我们在一个对象上查找某属性的时候，若该对象有，就直接返回，若没有，则沿着原型链继续向上查到，查找到 OBject.prototype 即停止;
+    5.  几乎所有的原型对象都是位于原型链顶端的 `Object` 的实例;
 
 
 ## 框架类
