docs:项目目录修正

--- a/source/_posts/🍓前端知识分类/网络安全类/前端鉴权.md
+++ b/source/_posts/🍓前端知识分类/网络安全类/前端鉴权.md
@@ -1,3 +1,5 @@
+
+
 HTTP是一种无状态的请求，所以后端不能通过请求来区分和管理请求和响应，也就是说服务无法单从请求上知道客户身份，
 > 一共有三种
 
@@ -51,3 +53,17 @@ token一般来说，有三种
 
 优点
   1. 不需要操作数据库，直接代码里校验
+
+
+
+
+## 基于token的身份验证实际开发中的处理步骤
+
+/**
+ * 基于token的验证原理
+ * 1. 登录时，客户端发送用户名和密码；
+ * 2. 服务器端校验通过就会发送一个有时效的token串，发送给客户端；
+ * 3. 客户端拿到token, 一般都会存储在localStorage或者cookies里；
+ * 4. 客户端每次请求都带有token, 可以将其放在请求头里面，每次请求都携带token
+ * 5. 服务端验证token, 所有需要校验身份的接口都会被校验token, 若token解析后的数据包含用户身份信息，则返回数据，否则抛出错误
+ */
