fix:改正一个小错误

--- a/source/_posts/知识点目录.md
+++ b/source/_posts/知识点目录.md
@@ -2,55 +2,55 @@
 
 ## JS基础类
 
-1. [ ] call和apply的原理是什么？
-2. [x] 手写 bind ？
-3. [ ] 手写 promise ？
-4. [x] 手写 柯里化实现？普通版和高级版
-5. [ ] 手写 实现深拷贝
-6. [ ] 闭包相关 闭包原理？闭包应用场景？闭包常见的坑？
-7. [x] new的原理是什么？
-8. [ ] this相关 如何正确判断this的指向？
-9. [ ] 什么是防抖？什么是节流？
-10. [ ] 继承有哪些？优缺点是什么？
-11. [ ] 前端跨域产生原因？常见解决方法？
-12. [x] Http和https区别？
-13. [ ] 箭头函数有哪些特点？
-14. [x] 判断数据类型的方法有哪些？区别是什么？
-15. [x] 说一下对原型链的理解？
-16. [ ] 判断两个对象相等？
-17. [ ] AMD，common.js规范
+1. [ ]  all和apply的原理是什么？
+2. [x]  手写 bind ？
+3. [ ]  手写 promise ？
+4. [x]  手写 柯里化实现？普通版和高级版
+5. [ ]  手写 实现深拷贝
+6. [ ]  闭包相关 闭包原理？闭包应用场景？闭包常见的坑？
+7. [x]  ew的原理是什么？
+8. [ ]  his相关 如何正确判断this的指向？
+9. [ ]  什么是防抖？什么是节流？
+10. [ ]  继承有哪些？优缺点是什么？
+11. [ ]  前端跨域产生原因？常见解决方法？
+12. [x]  Http和https区别？
+13. [ ]  箭头函数有哪些特点？
+14. [x]  判断数据类型的方法有哪些？区别是什么？
+15. [x]  说一下对原型链的理解？
+16. [ ]  判断两个对象相等？
+17. [ ]  AMD，common.js规范
 
 
 ## 框架类
 
-1. [ ] Vue为什么data以函数返回？（避免变量共享，这样他们就在同一个对象）
-2. [ ] 是否遇到过Vue深层次对象双向绑定后，子组件未监听到更新的情况？怎么解决？（1使用this.$set , 2 deep:true有性能问题）
-3. [ ] vue的响应式怎么做的？
+1. [ ]  Vue为什么data以函数返回？（避免变量共享，这样他们就在同一个对象）
+2. [ ]  是否遇到过Vue深层次对象双向绑定后，子组件未监听到更新的情况？怎么解决？（1使用this.$set , 2 deep:true有性能问题）
+3. [ ]  vue的响应式怎么做的？
 
 ## 算法
 
-1. [ ] 三种树遍历排序?
-2. [ ] 顺序排序?
-3. [ ] 数组扁平化?
+1. [x]  二叉树前中后遍历？
+2. [x]  多叉树深度优先遍历?广度优先遍历？
+3. [ ]  顺序排序?
+4. [ ]  数组扁平化?
 
 
 ## 性能优化类
 
-1. [x] CDN 原理
-2. [ ] 介绍下缓存？
-3. [ ] CSS优化讲一下？
-4. [x] 输入URL后发生了什么?
-5. [ ] 前端有哪些地方可以优化？
-6. [ ] 几种缓存策略的对比简单说一下？
-7. [x] 什么是防抖和节流？有什么区别？如何实现？(TODO:看下lodash的实现)
+1. [x]  CDN 原理
+2. [ ]  介绍下缓存？
+3. [ ]  CSS优化讲一下？
+5. [ ]  前端有哪些地方可以优化？
+6. [ ]  几种缓存策略的对比简单说一下？
+7. [x]  什么是防抖和节流？有什么区别？如何实现？(TODO:看下lodash的实现)
 
 
 
 ## 网络安全类
 
 
-1. [ ] 前端鉴权 cookies, session, token,
-2. [ ] 
+1. [x]  输入URL后发生了什么?
+2. [ ]  前端鉴权 cookies, session, token,
 
 
 
@@ -64,5 +64,4 @@
 
 
 ## 参考文章
-1. [ ] [20道经典面试题](https://juejin.im/post/5d124a12f265da1b9163a28d)
-2. [ ] 
+1. [ ]  [20道经典面试题](https://juejin.im/post/5d124a12f265da1b9163a28d)
