--- a/source/_posts/🍓前端知识分类/js基础总结/深拷贝.md
+++ b/source/_posts/🍓前端知识分类/js基础总结/深拷贝.md
@@ -1,7 +1,7 @@
 ## 乞丐版深拷贝
 
 - JSON.parse(JSON.stringify())
-- 缺点：无法应对循环引用问题
+- 缺点：无法处理循环引用问题
 
 ```javascript
 const obj = {
@@ -42,6 +42,12 @@ function clone(source) {
 - 但是应该是很多很多情况没有考虑
   
 ```javascript
+/**
+ * @des 深拷贝
+ * @param {*} source 要被克隆的对像
+ * @param {Map} map 
+ * @return: 
+ */
 function clone(source, map = new WeakMap()) {
   if (typeof source === "object") {
     let target = Array.isArray(source) ? [] : {};
