--- a/source/_posts/理解目录.md
+++ b/source/_posts/理解目录.md
@@ -93,3 +93,16 @@
 3. 节流？（详细见内页）
    1. 定时去执行一次操作，在规定的时间内，不管用户执行多少次操作，都只会执行一次
 
+
+## 网络安全类
+
+1. 输入URL后发生了什么?（详见内页）
+   1. 首先，本地DNS解析，将域名解析为IP地址；
+   2. 三次握手，确认客户端和服务器端已经连接成功，然后再开始网络资源请求；
+   3. 服务器端处理请求报文并返回处理后的结果报文；
+   4. 浏览器拿到报文数据并解析出所需数据，然后渲染页面；
+
+2. 三次握手？（详见内页）
+   1. 客户端发送一个包 
+   2. 服务器端收到之后，发送一个确认包，表示自己收到了客户端的包
+   3. 客户端在发送一个确认收到确认包
