--- a/source/_posts/知识点目录.md
+++ b/source/_posts/知识点目录.md
@@ -11,7 +11,7 @@
 7. [x]  ew的原理是什么？
 8. [ ]  his相关 如何正确判断this的指向？
 9. [ ]  什么是防抖？什么是节流？
-10. [ ]  继承有哪些？优缺点是什么？
+10. [ ]  继承的方式有哪些？优缺点是什么？
 11. [ ]  前端跨域产生原因？常见解决方法？
 12. [x]  Http和https区别？
 13. [ ]  箭头函数有哪些特点？
