--- a/source/_posts/🍓前端知识分类/JS相关类/判断数据类型.md
+++ b/source/_posts/🍓前端知识分类/JS相关类/判断数据类型.md
@@ -1,5 +1,7 @@
 ## Object.prototype.toString.call
 
+- (最完美)，返回类型的字符串表示
+
 ```javascript
 function checkType(value) {
   return Object.prototype.toString.call(value);
@@ -13,6 +15,11 @@ checkType(new Map([['name',1],['age',2]]))  // "[object Map]"
 
 ## typeof value
 
+1. 只能判断基本数据类型（undefine）
+2. 除了Function,其他的使用能用new操作符创建的都是Object
+3. 变脸未声明返回'undefined'而不会抛出错误
+
+
 ```javascript
 function checkType(value) {
   return typeof value;
@@ -21,3 +28,7 @@ function checkType(value) {
 checkType([]) // "object"
 checkType(new Map([['name',1],['age',2]]))  // "object"
 ```
+
+##  A instanceof B 
+
+1. 用于判断A是否B的实例，即B是否在A的原型链上
