--- a/source/_posts/🍓前端知识分类/JS相关类/原型和原型链.md
+++ b/source/_posts/🍓前端知识分类/JS相关类/原型和原型链.md
@@ -33,3 +33,30 @@ const person2 = new Person();
 ```
 
 <img src="/Blog/images/原型链表示图.png" title="原型链表示图" width="70%" height="50%">
+
+
+
+
+
+## 确定原型和实例之间的关系
+
+1. instanceof
+
+```javascript
+const Person = function() {
+  this.name = "lixingjuan";
+};
+const person1 = new Person();
+person1 instanceof Person; // true
+```
+
+
+2. isPrototypeOf()方法
+
+```javascript
+const Person = function() {
+  this.name = "lixingjuan";
+};
+const person1 = new Person();
+Person.prototype.isPrototypeOf(person1); // true
+```
