--- a/source/_posts/🍓前端知识分类/JS相关类/深拷贝.md
+++ b/source/_posts/🍓前端知识分类/JS相关类/深拷贝.md
@@ -67,7 +67,7 @@ function clone(source, map = new WeakMap()) {
 
 
 
-## lodash的深拷贝
+## lodash的深拷贝+理解注释
 
 ```javascript
 import { isObject, isBuffer } from "util";
