doc:继承添加寄生式继承和组合寄生式继承

--- a/source/_posts/🍓前端知识分类/JS相关类/继承相关.md
+++ b/source/_posts/🍓前端知识分类/JS相关类/继承相关.md
@@ -8,9 +8,24 @@
 5. 寄生式继承
 6. 组合寄生式继承
 
-## 原型继承
+简介
+1. 原型链继承：思想：将子类型实例的`prototype`指向超类型实例
+1. 借用构造函数：
+   1. 思想：通过 `call()` 或 `apply()`方法，在（将来）新创建的对象上执行超类型构造函数；
+   2. 优点：
+      1. 可向超类型传值
+      2. 可为子类型实例单独定义属性
+   3. 缺点：函数内部定义，代码无法复用；
+2. 组合式继承：结合原型链继承和借用构造函数继承，
+   1. 解决原型链继承：实例引用类型属性共享 和 无法向超类型传值
+   2. 解决借用构造函数继承：代码不可复用问题；
+3. 原型式继承：可以在不必预先定义构造函数的情况下实现继承，本质是执行给定对象的浅拷贝。而复制后的副本还可以得到进一步的改造；
+4. 寄生式继承: 为了解决组合继承模式由于多次调用超类型构造函数而导致的低效率问题
+5. 组合寄生式继承: 集寄生式继承和组合继承的优点于一身，是实现基于类型积尘的最优方式
 
-- 实现方法：通过修改对象的原型指向来实现原型继承
+## 原型链继承
+
+- 实现方法：将一个对象的实例，赋值给另一个对象的原型，这样，子类型就能够访问超级性的所有属性和方法
 
 ```javascript
 function Father() {
@@ -61,7 +76,7 @@ console.log(instance2.colors); // [ 'red', 'green', 'black' ]
 
 ## 借用构造函数继承
 
-> 实现思想，通过 `call()` 或 `apply()`方法，在（将来）新创建的对象上执行构造函数
+> 实现思想，通过 `call()` 或 `apply()`方法，在（将来）新创建的对象上执行超类型构造函数；
 > 我们实际上实在新创建的 `Son` 实例的环境中，调用了 `Father` 构造函数
 > 这样一来，就会在 `Son` 对象上执行 `Father` 函数中定义的所有对象初始化代码
 > 结果，每个 `Son` 的实例都会拥有自己的 `colors`属性 的副本了
@@ -135,18 +150,18 @@ Father.prototype.sayName = function() {
 };
 
 function Son(name, age) {
-  Father.call(this, name);
+  Father.call(this, name);  // ！！！：第二次调用超类型函数
   this.age = age;
 }
 
 // 继承方法
-Son.prototype = new Father(); // Son 的原型指向 Father的实例
+Son.prototype = new Father(); // Son 的原型指向 Father的实例，// ！！！：第一次调用超类型函数
 Son.prototype.constructor = Son;
 Son.prototype.sayAge = function() {
   console.log(this.age);
 };
 
-const instance1 = new Son("Tom", 24);
+const instance1 = new Son("Tom", 24); 
 instance1.sayName(); // 'Tom'
 instance1.sayAge(); // 24
 instance1.colors.push("pink");
@@ -168,3 +183,207 @@ console.log(instance2.colors); // [ 'red', 'green', 'black' ]
 
 > 组合继承避免了原型链和借用构造函数的缺陷，融合了他们的优点，是最常用的继承方式
 > 同时，instanceof 和isPrototypeOf() 也能够用于识别基于组合继承创建的对象
+> 缺点：无论什么情况下，都会调用两次超类型函数（详见组合式继承部分）
+> 第一次调用：得到属性，`name` 和 `colors`, 他们都是
+
+
+
+## 原型链继承
+
+- 最初版本
+> 借助原型可以基于已有的对象创建新对象，同时还不必因此创建自定义类型；
+
+```javascript
+/* 原型式继承 - 初代版本 */
+// 本质上，是对传入的对象执行了一次浅拷贝
+function object(o) {
+  function F() {}
+  F.prototype = o;
+  return new F();
+}
+
+const person = {
+  name: "Tom",
+  friends: ["Herry", "Merry"]
+};
+const instance1 = object(person);
+const instance2 = object(person);
+
+// 修改实例1 的引用属性值
+instance1.friends.name = "Gua";
+instance1.friends.push("cat");
+
+// 实例2 的该属性值也随之改变
+console.log(instance2.name); // 'Tom'
+console.log(instance2.friends); // [ 'Herry', 'Merry', 'cat' ]
+// 说明，实例1，2 的引用类型属性，还是共享的同一个属性值
+```
+
+
+
+- 现代实现方法：ES5的 Object.create()；
+- 该对象接收两个参数：一个用做新对象原型的对象，（可选）一个为新对象定义额外属性的对象；
+- 在只想让一个对象与另一个对象保持类似的情况下，使用原型继承即可；
+- 不过，请注意，包含引用类型值的属性始终都会共享相应的值；
+
+
+
+```javascript
+
+/* 原型式继承 - 现代方法 */
+const person = {
+  name: "Tom",
+  friends: ["Herry", "Merry"]
+};
+
+const instance1 = Object.create(person, {
+  sisters: ["hua", "miao"]
+});
+const instance2 = Object.create(person);
+
+// 修改实例1 的引用属性值
+instance1.friends.push("cat");
+
+// 实例2 的该属性值也随之改变
+console.log(instance2.friends); // [ 'Herry', 'Merry', 'cat' ]
+```
+
+
+
+## 寄生式继承
+
+- 思路：创建一个仅用于封装继承过程的函数，在函数内部以某种方式增强对象，最后返回对象
+- 感觉这种方法没什么优点，实例的引用类型值共享也没解决，函数复用效率也低
+
+```javascript
+
+/* 寄生式继承 */
+const person = {
+  name: "Tom",
+  friends: ["Herry", "Merry"]
+};
+
+// 前面的原型式继承函数，该函数并非必须的，任何能够返回新对象的函数都适用于此模式
+function object(o) {
+  function F() {}
+  F.prototype = o;
+  return new F();
+}
+
+function createAnother(original) {
+  const clone = object(original);
+  // 为新对象添加自己的方法，即，函数内部以某种方式增强对象
+  clone.sayHi = function() {
+    console.log("hi");
+  };
+  return clone;
+}
+
+const instance1 = createAnother(person);
+const instance2 = createAnother(person);
+instance1.sayHi();
+// 修改实例1 的引用属性值
+instance1.friends.push("cat");
+
+instance2.friends; // [ 'Herry', 'Merry', 'cat' ]
+```
+
+
+## 寄生组合式继承 -- 最理想的继承范式
+
+- 寄生组合式继承，即，通过借用构造函数来继承属性，通过原型链的混成形式来继承方法
+
+> 基本思路：不必为了指定子类型的原型而调用超类型的构造函数，我们所需要的无非就是超类型原型的一个副本，本质上，就是使用寄生式继承来继承超类型的原型，然后再将结果指定给子类型的原型；
+
+> 寄生组合式继承优点
+>   1. 高效：仅调用一次超类型构造函数，并且避免了在 Son.prototype上创建不必要的、多余的属性
+>   2. 原型链不变：
+>   3. 还能正常使用 `instanceof` 和 `isPrototypeOf()` 
+
+
+```javascript
+
+/* 组合继承 */
+// 定义超类型构造函数
+function Father(name) {
+  this.name = name;
+  this.colors = ["red", "green"];
+}
+
+// 在超类型的原型上定义方法
+Father.prototype.sayName = function() {
+  console.log(this.name);
+};
+
+// 定义子类型构造函数
+function Son(name, age) {
++  Father.call(this, name);  // 第二次调用超类型函数
+  this.age = age;
+}
+
++ Son.prototype = new Father(); // 第一次调用超类型函数
+Son.prototype.constructor = Son;
+
+// 在子类型的原型上添加方法
+Son.prototype.sayAge = function() {
+  console.log(this.age);
+};
+
+const instance1 = new Son("Tom", 24); // 调用子类构造函数，
+const instance2 = new Son("Marry", 12);
+ 
+```
+
+- 第一次调用超类型函数: 发生创建 超类构造函数的实例，并将其赋值给 子类的prototype
+  - Son.prototype 得到两个属性 ：`name` 和`colors`, 他们都是Father的实例属性，只不过现在位于 Son 的原型中
+- 第二次调用超类型函数发生在，当调用 构造函数 `Son` 的时候
+  - 会再一次调用 构造函数 `Father`, 这次是为新对象创建了实例属性 `name` 和`colors`
+
+- 也就是说，有两组 `name` 和`colors` 属性，一组在实例上，一组在 Son原型中，这就是调用两次Father 构造函数的结果
+
+
+- 寄生组合继承的基本模式乳如下：
+
+```javascript
+/**
+ * @param {Object} son 子类型构造函数
+ * @param {Object} father 超类型构造函数
+ */
+function inheritPrototype(son, father) {
+  // 1. 创建超类型原型的一个副本
+  const prototype = Object.create(father.prototype);
+  // 2. 为创建的副本添加 constructor 属性， 从而弥补因重写原型而失去的默认的 constructor 属性
+  prototype.constructor = son;
+  // 3. 将新创建的对象（即超类型的副本），赋值给子类型的原型
+  son.prototype = prototype;
+}
+```
+
+-  使用该函数，去替换前面例子中，为子类型原型赋值的语句，完整版如下
+
+```javascript
+/* 寄生组合式继承 */
+// 定义超类型构造函数
+function Father(name) {
+  this.name = name;
+  this.colors = ["red", "green"];
+}
+
+// 在超类型的原型上定义方法
+Father.prototype.sayName = function() {
+  console.log(this.name);
+};
+
+// 定义子类型构造函数
+function Son(name, age) {
+  Father.call(this, name);  // 第二次调用超类型函数
+  this.age = age;
+}
+
+inheritPrototype(Son, Father)
+
+// 在子类型的原型上添加方法
+Son.prototype.sayAge = function() {
+  console.log(this.age);
+};
+```
