fix:继承格式修改

--- a/source/_posts/🍓前端知识分类/JS相关类/箭头函数.md
+++ b/source/_posts/🍓前端知识分类/JS相关类/箭头函数.md
@@ -18,12 +18,8 @@ console.log(func({ value: 1, num: 2 })); // { data :3 }
 
 与变量解构的应用（在react中）
 
-```javaScript
-let func = ({ value, num }) => ({ data: value + num });
-console.log(func({ value: 1, num: 2 })); // { data :3 }
-```
 
-一般设置state
+- 一般设置state
 
 ```javaScript
 
@@ -39,7 +35,7 @@ handleSet = () => {
   });
 };
 ```
-使用箭头函数与变量解构后可以简化为
+- 使用箭头函数与变量解构后可以简化为
 
 ```javaScript
 
