--- a/source/_posts/🍓前端知识分类/JS相关类/继承相关.md
+++ b/source/_posts/🍓前端知识分类/JS相关类/继承相关.md
@@ -25,14 +25,25 @@
 
 ## 原型链继承
 
-- 实现方法：将一个对象的实例，赋值给另一个对象的原型，这样，子类型就能够访问超级性的所有属性和方法
+**实现方法**：将子类型的prototype 指向超类型的实例；
+
+这样，子类型就能够访问超类型的所有属性和方法
 
 ```javascript
+/* 原型链继承 */
+
+// 定义超类型构造函数
 function Father() {
   this.colors = ["red", "green"];
 }
+
+// 定义子类型构造函数
 function Son() {}
+
+// 使子类型构造函数的 原型，指向 超类的实例
 Son.prototype = new Father(); // 使Son的原型指向Father的实例
+
+// 创建子类实例
 const instance1 = new Son();
 const instance2 = new Son();
 
@@ -44,14 +55,16 @@ console.log(Father.prototype.isPrototypeOf(instance2));
 
 
 <br>
+<br>
 
-> 原型链继承问题1，包含引用类型值的原型，包含引用类型值的原型属性会被所有实例共享；
-> 再通过原型实现继承时，原型实际上会变成另一个类型的实例，于是，原先的实例属性`(new Father()的属性)`也就变成现在的原型属性`instance1和instance2的原型属性`了
+原型链继承问题1，包含引用类型值的原型，包含引用类型值的原型属性会被所有实例共享；
+
+在通过原型实现继承时，原型实际上会变成另一个类型的实例，于是，原先的实例属性`(new Father()的属性)`也就变成现在的原型属性`instance1和instance2的原型属性`了
 
 <br>
 
 ```javascript
-// 修改 instance1 的属性
+// 修改 instance1 的引用属性值
 instance1.colors.push("black");
 console.log(instance1.colors); // [ 'red', 'green', 'black' ]
 // 发现 instance2的属性值也会随之改变
@@ -66,8 +79,9 @@ console.log(instance2.colors); // [ 'red', 'green', 'black' ]
 
 <br>
 
-> 原型链继承问题2：在创建子类型的实例时，不能向超类型的构造函数中传递参数。
-> 准确点讲，是没有办法在不影响所有对象实例的情况下，给 超类型的构造函数传递参数
+原型链继承问题2：在创建子类型的实例时，不能向超类型的构造函数中传递参数。
+
+准确点讲，是没有办法在不影响所有对象实例的情况下，给 超类型的构造函数传递参数
 
 - 综上，实践中很少会单独使用原型链；
 
@@ -76,34 +90,40 @@ console.log(instance2.colors); // [ 'red', 'green', 'black' ]
 
 ## 借用构造函数继承
 
-> 实现思想，通过 `call()` 或 `apply()`方法，在（将来）新创建的对象上执行超类型构造函数；
-> 我们实际上实在新创建的 `Son` 实例的环境中，调用了 `Father` 构造函数
-> 这样一来，就会在 `Son` 对象上执行 `Father` 函数中定义的所有对象初始化代码
-> 结果，每个 `Son` 的实例都会拥有自己的 `colors`属性 的副本了
+**实现思想**：通过 `call()` 或 `apply()`方法，在（将来）新创建的对象上执行超类型构造函数；
+
+- 我们实际上是在新创建的 `Son` 实例的环境中，**调用了 `Father` 构造函数**；
+- 这样一来，就会在 `Son` 对象上执行 `Father` 函数中定义的所有对象初始化代码；
+- 结果，每个 `Son` 的实例都会拥有自己的 `colors`属性 的副本了
 
 ```javascript
 
 /* 借用构造函数实现继承 */
+// 定义超类型构造函数
 function Father() {
   this.colors = ["res", "green"];
 }
 
+// 定义子类型构造函数
 function Son() {
-// 当使用new操作符创建Son的实例的时候，this指向实例
+// 当使用new操作符创建 Son的实例的时候
+// 1. this指向 Son的实例
+// 2. 会在实例上执行一边 超类型构造函数
   Father.call(this);
 }
 
+// 使用new操作符，创建Son的实例
 const instance1 = new Son();
 const instance2 = new Son();
 
 // 修改 instance1 的colors 属性
 instance1.colors.push("pink");
-console.log(instance2.colors); // ["res", "green"]
+instance2.colors        // ["res", "green"]
 // 发现 instance2.colors 属性值并未受影响，解决了原型继承时，引用类型所带来的实例共享问题
 
 ```
 
-> 与原型继承相比，借用构造函数有一个很大的优点，可以在子类构造函数中，向超类型构造函数传递参数
+与原型继承相比，借用构造函数有一个很大的优点，可以在子类构造函数中，向超类型构造函数传递参数
 
 ```javascript
 
@@ -125,16 +145,17 @@ console.log(instance1.age);   // 25
 
 ```
 
-> 仍存在的问题：方法都在构造函数内部定义，函数复用性差；
+**仍存在的问题**：方法都在构造函数内部定义，函数复用性差；
 
-- 因此，借用构造函数的方法也很少单独使用
+- 综上，借用构造函数的方法也很少单独使用
 
 
 ## 组合继承
 
 
-> 结合原型链继承 和 借用构造函数继承, 发挥二者之长
-> 思路：使用原型链实现对 **原型属性和方法** 的继承，而通过借用构造函数实现对 **实例属性的继承**
+结合原型链继承 和 借用构造函数继承, 发挥二者之长
+
+**实现思路**：使用原型链实现对 **原型属性和方法** 的继承，而通过借用构造函数实现对 **实例属性的继承**
 
 
 ```javascript
@@ -181,31 +202,39 @@ console.log(instance2.colors); // [ 'red', 'green', 'black' ]
 - 然后，又在该新原型上定义了方法 sayAge()
 - 这样一来，就可以让两个不同的 Son 实例，分别拥有自己的属性————包括colros属性，
 
-> 组合继承避免了原型链和借用构造函数的缺陷，融合了他们的优点，是最常用的继承方式
-> 同时，instanceof 和isPrototypeOf() 也能够用于识别基于组合继承创建的对象
-> 缺点：无论什么情况下，都会调用两次超类型函数（详见组合式继承部分）
-> 第一次调用：得到属性，`name` 和 `colors`, 他们都是
+组合继承
+优点
+1. 避免了原型链和借用构造函数的缺陷，融合了他们的优点，是最常用的继承方式；
+2. 同时，instanceof 和isPrototypeOf() 也能够用于识别基于组合继承创建的对象； 
+
+缺点：
+1. 无论什么情况下，都会调用两次超类型函数（详见组合式继承部分）；
 
 
 
 ## 原型链继承
 
-- 最初版本
-> 借助原型可以基于已有的对象创建新对象，同时还不必因此创建自定义类型；
+**初代版本**： 借助原型可以基于已有的对象创建新对象，同时还不必因此创建自定义类型；
+本质上，是对传入的对象执行了一次浅拷贝
 
 ```javascript
+
 /* 原型式继承 - 初代版本 */
-// 本质上，是对传入的对象执行了一次浅拷贝
+
+// 定义一个方法用来处理 被继承对象
 function object(o) {
   function F() {}
   F.prototype = o;
   return new F();
 }
 
+// 定义 被继承对象
 const person = {
   name: "Tom",
   friends: ["Herry", "Merry"]
 };
+
+// 通过object方法创建 person 的实例
 const instance1 = object(person);
 const instance2 = object(person);
 
@@ -221,7 +250,8 @@ console.log(instance2.friends); // [ 'Herry', 'Merry', 'cat' ]
 
 
 
-- 现代实现方法：ES5的 Object.create()；
+**现代实现方法**：ES5的 Object.create()；
+
 - 该对象接收两个参数：一个用做新对象原型的对象，（可选）一个为新对象定义额外属性的对象；
 - 在只想让一个对象与另一个对象保持类似的情况下，使用原型继承即可；
 - 不过，请注意，包含引用类型值的属性始终都会共享相应的值；
@@ -231,11 +261,14 @@ console.log(instance2.friends); // [ 'Herry', 'Merry', 'cat' ]
 ```javascript
 
 /* 原型式继承 - 现代方法 */
+
+// 创建一个原始对象A
 const person = {
   name: "Tom",
   friends: ["Herry", "Merry"]
 };
 
+// 创建对象A的实例，并定义实例自己的属性
 const instance1 = Object.create(person, {
   sisters: ["hua", "miao"]
 });
@@ -258,6 +291,7 @@ console.log(instance2.friends); // [ 'Herry', 'Merry', 'cat' ]
 ```javascript
 
 /* 寄生式继承 */
+
 const person = {
   name: "Tom",
   friends: ["Herry", "Merry"]
@@ -387,3 +421,9 @@ Son.prototype.sayAge = function() {
   console.log(this.age);
 };
 ```
+
+
+
+
+## 参考
+- 《JavaScript高级程序设计-第六章 6.3 继承》
