add:docs:添加class基础

--- a/source/_posts/🍓前端知识分类/JS相关类/继承相关.md
+++ b/source/_posts/🍓前端知识分类/JS相关类/继承相关.md
@@ -7,6 +7,7 @@
 4. 原型式继承
 5. 寄生式继承
 6. 组合寄生式继承
+7. ES6 类继承
 
 简介
 1. 原型链继承：思想：将子类型实例的`prototype`指向超类型实例
@@ -178,6 +179,7 @@ function Son(name, age) {
 // 继承方法
 Son.prototype = new Father(); // Son 的原型指向 Father的实例，// ！！！：第一次调用超类型函数
 Son.prototype.constructor = Son;
+
 Son.prototype.sayAge = function() {
   console.log(this.age);
 };
@@ -285,8 +287,9 @@ console.log(instance2.friends); // [ 'Herry', 'Merry', 'cat' ]
 
 ## 寄生式继承
 
-- 思路：创建一个仅用于封装继承过程的函数，在函数内部以某种方式增强对象，最后返回对象
-- 感觉这种方法没什么优点，实例的引用类型值共享也没解决，函数复用效率也低
+*实现思路*：创建一个仅用于封装继承过程的函数，在函数内部以某种方式增强对象，最后返回对象；
+
+感觉这种方法没什么优点，实例的引用类型值共享也没解决，函数复用效率也低；
 
 ```javascript
 
@@ -325,14 +328,15 @@ instance2.friends; // [ 'Herry', 'Merry', 'cat' ]
 
 ## 寄生组合式继承 -- 最理想的继承范式
 
-- 寄生组合式继承，即，通过借用构造函数来继承属性，通过原型链的混成形式来继承方法
+寄生组合式继承，即，通过借用构造函数来继承属性，通过原型链的混成形式来继承方法
+不必为了指定子类型的原型而调用超类型的构造函数，我们所需要的无非就是超类型原型的一个副本
 
-> 基本思路：不必为了指定子类型的原型而调用超类型的构造函数，我们所需要的无非就是超类型原型的一个副本，本质上，就是使用寄生式继承来继承超类型的原型，然后再将结果指定给子类型的原型；
+**基本思路**：使用寄生式继承来继承超类型的原型，然后再将结果指定给子类型的原型；
 
-> 寄生组合式继承优点
->   1. 高效：仅调用一次超类型构造函数，并且避免了在 Son.prototype上创建不必要的、多余的属性
->   2. 原型链不变：
->   3. 还能正常使用 `instanceof` 和 `isPrototypeOf()` 
+寄生组合式继承优点
+  1. 高效：仅调用一次超类型构造函数，并且避免了在 Son.prototype上创建不必要的、多余的属性
+  2. 原型链不变：
+  3. 还能正常使用 `instanceof` 和 `isPrototypeOf()` 
 
 
 ```javascript
@@ -376,7 +380,7 @@ const instance2 = new Son("Marry", 12);
 - 也就是说，有两组 `name` 和`colors` 属性，一组在实例上，一组在 Son原型中，这就是调用两次Father 构造函数的结果
 
 
-- 寄生组合继承的基本模式乳如下：
+寄生组合继承的基本模式如下：
 
 ```javascript
 /**
@@ -393,7 +397,7 @@ function inheritPrototype(son, father) {
 }
 ```
 
--  使用该函数，去替换前面例子中，为子类型原型赋值的语句，完整版如下
+使用该函数，去替换前面例子中，为子类型原型赋值的语句，完整版如下
 
 ```javascript
 /* 寄生组合式继承 */
@@ -423,6 +427,7 @@ Son.prototype.sayAge = function() {
 ```
 
 
+## Class继承（详见Class篇）
 
 
 ## 参考
