--- a/source/_posts/🍓前端知识分类/JS相关类/原型和原型链.md
+++ b/source/_posts/🍓前端知识分类/JS相关类/原型和原型链.md
@@ -1,6 +1,15 @@
 ## 原型和原型链
 
-- 无论什么时候，只要我们创建了一个函数，就会根据一组特定的规则为该函数创建一个prototype属性，这个属性指向函数的原型对象。默认情况下，所有原型对象都会自动获得一个`construct`（构造函数）属性，这个属性包含一个指向`prototype`属性所在函数的指针，而通过这个构造函数，我们还可以为函数原型添加其他属性和方法
+JavaScript的原型存在诸多矛盾，他的某些复杂的语法看起来像是基于类的语言，这些语法问题掩盖了他的原型机制。他不直接让对象从其他对象继承，反而插入了一个多余的简介曾， 通过构造函数产生对象
+当一个函数对象被创建时， Function构造器产生的函数对象会运行类似这样的一些代码
+
+```javascript
+this.prototype = { constructor: this}
+```
+新函数对象会被赋予一个`prototype`属性，该属性的值是一个包含`constructor`属性且属性值是该新函数的对象。 **这个`prototype`对象是用来存放继承特征的地方**。 
+因为JavaScript没有提供一种方法用来确定哪个函数是存放继承特征的地方，所以每个函数都会得到一个prototype对象，constructor对象没什么用，重要是的`prototype`对象。
+
+`prototype`属性指向函数的原型对象。默认情况下，所有原型对象都会自动获得一个`construct`（构造函数）属性，这个属性包含一个指向`prototype`属性所在函数的指针，而通过这个构造函数，我们还可以为函数原型添加其他属性和方法。
 
 
 1. 我们创建的每个函数都有一个 prototype 属性，这个属性是一个指针，指向一个对象
@@ -60,3 +69,7 @@ const Person = function() {
 const person1 = new Person();
 Person.prototype.isPrototypeOf(person1); // true
 ```
+
+
+## 参考文章
+1. 《JavaScript语言精粹 - 第五章 继承-伪类》
