--- a/source/_posts/🍓前端知识分类/JS相关类/继承相关.md
+++ b/source/_posts/🍓前端知识分类/JS相关类/继承相关.md
@@ -58,7 +58,7 @@ console.log(Father.prototype.isPrototypeOf(instance2));
 <br>
 <br>
 
-原型链继承问题1，包含引用类型值的原型，包含引用类型值的原型属性会被所有实例共享；
+**原型链继承问题1**，包含引用类型值的原型，包含引用类型值的原型属性会被所有实例共享；
 
 在通过原型实现继承时，原型实际上会变成另一个类型的实例，于是，原先的实例属性`(new Father()的属性)`也就变成现在的原型属性`instance1和instance2的原型属性`了
 
@@ -80,7 +80,7 @@ console.log(instance2.colors); // [ 'red', 'green', 'black' ]
 
 <br>
 
-原型链继承问题2：在创建子类型的实例时，不能向超类型的构造函数中传递参数。
+**原型链继承问题2**：在创建子类型的实例时，不能向超类型的构造函数中传递参数。
 
 准确点讲，是没有办法在不影响所有对象实例的情况下，给 超类型的构造函数传递参数
 
