--- a/source/_posts/🍓前端知识分类/Node.js相关类/常用方法总结.md
+++ b/source/_posts/🍓前端知识分类/Node.js相关类/常用方法总结.md
@@ -57,6 +57,15 @@ path.basename('/foo/bar/baz/asdf/quux.html', '.html');  // quux
 ```
 
 
+4. 
+```javascript
+- http://localhost:8888/start?foo=bar&hello=world
+- url.parse(string).query：获取域名后start的位置， 区分请求是/start 和 /upload 
+- url.parse(string).pathname：获取域名后面的部分
+- querystring.parse(queryString)["foo"]：获取foo的值
+- querystring.parse(queryString)["hello"]：获取hello的值
+```
+
 
 ## 常用函数类
 1. 向指定路径追加内容
