--- a/source/_posts/🍓前端知识分类/Node.js相关类/常用方法总结.md
+++ b/source/_posts/🍓前端知识分类/Node.js相关类/常用方法总结.md
@@ -11,10 +11,10 @@
 
 ```javascript
 /* eg.1 _node是一个文件夹 */
-path.dirname('/BlogBody/source/_node'); // BlogBody/source
+path.dirname('/Blog/source/_node'); // Blog/source
 
-/* eg.2 /BlogBody/source/_node/index.js 中打印 '__dirname' */
-console.log(__dirname);   // /BlogBody/source/_node/
+/* eg.2 /Blog/source/_node/index.js 中打印 '__dirname' */
+console.log(__dirname);   // /Blog/source/_node/
 
 ```
 2. path.extname(path)
@@ -25,7 +25,7 @@ console.log(__dirname);   // /BlogBody/source/_node/
 ```javascript
 
 /* eg.1 指定了路径 */
-path.extname("/BlogBody/source/_node/index.js"); // .js
+path.extname("/Blog/source/_node/index.js"); // .js
 
 /* eg.2 随意指定了一个文件 */
 path.extname("ex.js");   // .js
